Finish Design Dialog filter with Technology